# images-cleanup

./: .gitignore  CLAUDE.md  pyproject.toml  specification.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx  main.tsx  test-setup.ts
imagesorter/: __init__.py  __main__.py  cli.py  config.py  file_ops.py  logging_setup.py  scanner.py  similarity.py  sorter.py  web.py
tests/: test_cli.py  test_collision_policy.py  test_config.py  test_file_ops.py  test_logging.py  test_similarity.py  test_sorter.py  test_sorter_helpers.py  test_sorter_run.py  test_web.py
tests/real_images_tests/: conftest.py  test_groupbytags.py
