[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "imagesorter"
version = "0.1.0"
description = "Sort images by detected tags or visual similarity."
requires-python = ">=3.11"
dependencies = [
    "ultralytics",
    "opencv-python",
    "imagehash",
    "PyYAML",
    "Pillow",
]

[project.scripts]
imagesorter = "imagesorter.__main__:main"
